# FastAPI

./: .gitignore  requirements.txt
mahenzon/: alembic.ini  crud.py  db.sqlite3  items_views.py  main.py  pyproject.toml  query.sql  requirements.txt
mahenzon/alembic/: env.py
mahenzon/alembic/versions/: 2024_08_19_1645-3a1d8d7ec3a0_create_products_table.py  2024_08_19_1658-657ccb50f6e0_create_posts_table.py  2024_08_19_1720-1fef979da318_create_profile_table.py  2024_08_20_1844-7d88439f4e08_create_orders_table.py  2024_08_20_2207-0e07ff36ebb5_add_count_column_to_order_product_.py
mahenzon/api_v1/: __init__.py
mahenzon/api_v1/demo_auth/: crud.py  demo_jwt_auth.py  helpers.py  views.py
mahenzon/api_v1/products/: dependencies.py  schemas.py  views.py
mahenzon/auth/: utils.py
mahenzon/core/: config.py
mahenzon/core/models/: __init__.py  db_helper.py  order.py  order_product_association.py  post.py  product.py  user.py
mahenzon/fastapi-example-base-app/: README.md  docker-compose.yml  main.py  pyproject.toml
mahenzon/fastapi-example-base-app/fastapi-application/: .env.example  .env.template  create_fastapi_app.py  main.py
mahenzon/fastapi-example-base-app/fastapi-application/actions/: create_superuser.py
mahenzon/fastapi-example-base-app/fastapi-application/alembic/: env.py
mahenzon/fastapi-example-base-app/fastapi-application/api/: __init__.py
mahenzon/microshop/: crud.py  main.py
mahenzon/microshop/alembic/: env.py
mahenzon/microshop/api_v1/: __init__.py
mahenzon/microshop/api_v1/demo_auth/: demo_jwt_auth.py  (+2 more)
mahenzon/microshop/auth/: README.md  utils.py
mahenzon/microshop/certs/: jwt-private.pem  jwt-public.pem
mahenzon/microshop/core/: config.py
mahenzon/users/: crud.py  schemas.py  views.py
(+70 files in other folders)
